2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-01-11  Chris Burdess  <dog@gnu.org>

	* gnu/java/net/protocol/http/HTTPConnection.java: Use correct form of
	Host header when using a non-default port number.

	2005-01-11  Chris Burdess  <dog@gnu.org>

	* javax/net/ssl/HttpsURLConnection.java: Do not request SSLv3
	provider during class initialization.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-11  Michael Koch  <konqueror@gmx.de>

	* java/awt/Robot.java,
	java/awt/Scrollbar.java,
	java/awt/print/PrinterJob.java,
	javax/swing/JTable.java,
	javax/swing/text/AbstractDocument.java:
	Reworked import statements.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-11  Michael Koch  <konqueror@gmx.de>

	* java/beans/XMLDecoder.java: Reworked imports, fixed class javadoc.
	* java/io/File.java,
	java/net/Inet4Address.java,
	java/util/Currency.java,
	java/util/ResourceBundle.java: Reworked imports.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-10  Tom Tromey  <tromey@redhat.com>

	* java/io/BufferedInputStream.java: Fixed indentation.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-01-10  Michael Koch  <konqueror@gmx.de>

	* javax/swing/JEditorPane.java
	(read): Implemented.
	(write): Likewise.
	* javax/swing/text/DefaultEditorKit.java
	(page): Renamed from page_url. Made private.
	(editorKit): Renamed from kit. Made private.
	(ctype): Removed.
	(JEditorPane): All constructors reimplemented.
	(getContentType): Use content type from editor kit.
	(getEditorKit): Return editorKit.
	(getEditorKitForContentType):Likewise.
	(getPage): Return page.
	(setContentType): Reimplemented.
	(setEditorKit): Likewise.
	(setEditorKitForContentType): Removed wrong implementation.
	(setPage): Implemented.
	
2005-01-13  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	