@@ -1,6 +1,14 @@
 2005-01-13  Dalibor Topic  <robilad@kaffe.org>
 
 	Resynced with GNU Classpath.
+	
+	2005-01-11  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/UIDefaults.java (put): Handle value of null.
+
+2005-01-13  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
 
 	2005-01-11  Chris Burdess  <dog@gnu.org>
 
